WebCore/css/CSSComputedStyleDeclaration.h
@@ -39,7 +39,7 @@ public:
 
     virtual String cssText() const;
 
-    virtual unsigned length() const;
+    virtual unsigned virtualLength() const;
     virtual String item(unsigned index) const;
 
     virtual PassRefPtr<CSSValue> getPropertyCSSValue(int propertyID) const;
