WebCore/css/CSSStyleSelector.h
@@ -85,7 +85,6 @@ public:
                          bool strictParsing, bool matchAuthorAndUserStyles);
         ~CSSStyleSelector();
 
-        void initElement(Element*);
         void initForStyleResolve(Element*, RenderStyle* parentStyle = 0, PseudoId = NOPSEUDO);
         PassRefPtr<RenderStyle> styleForElement(Element*, RenderStyle* parentStyle = 0, bool allowSharing = true, bool resolveForRootDefault = false, bool matchVisitedLinks = false);
         void keyframeStylesForAnimation(Element*, const RenderStyle*, KeyframeList& list);
@@ -101,6 +100,7 @@ public:
 #endif
 
     private:
+        void initElement(Element*);
         RenderStyle* locateSharedStyle();
         Node* locateCousinList(Element* parent, unsigned depth = 1);
         bool canShareStyleWithElement(Node*);
@@ -201,6 +201,7 @@ public:
             bool checkScrollbarPseudoClass(CSSSelector*, PseudoId& dynamicPseudo) const;
 
             EInsideLink determineLinkState(Element* element) const;
+            EInsideLink determineLinkStateSlowCase(Element* element) const;
             void allVisitedStateChanged();
             void visitedStateChanged(LinkHash visitedHash);
 
@@ -251,6 +252,19 @@ public:
 #endif
 
         StyleImage* styleImage(CSSValue* value);
+
+
+        EInsideLink currentElementLinkState() const
+        {
+            if (!m_haveCachedLinkState) {
+                m_cachedLinkState = m_checker.determineLinkState(m_element);
+                m_haveCachedLinkState = true;
+            }
+            return m_cachedLinkState;
+        }
+
+        mutable EInsideLink m_cachedLinkState;
+        mutable bool m_haveCachedLinkState;
 
         // We collect the set of decls that match in |m_matchedDecls|.  We then walk the
         // set of matched decls four times, once for those properties that others depend on (like font-size),
@@ -347,7 +361,7 @@ public:
         CSSRuleData* m_first;
         CSSRuleData* m_last;
     };
-    
+
 } // namespace WebCore
 
 #endif // CSSStyleSelector_h
